fix(external-link): ensure a correct vertical alignment with the surrounding text
OUI-1813

--- a/projects/oblique/src/styles/scss/core/components/_external-link.scss
+++ b/projects/oblique/src/styles/scss/core/components/_external-link.scss
@@ -2,6 +2,10 @@
 
 .ob-external-link {
 	display: inline-flex;
-	align-items: center;
+	align-items: baseline;
 	gap: variables.$ob-spacing-xs;
+
+	.mat-icon {
+		align-self: center;
+	}
 }
